# OrionDB_project

./: OrionUserInterface.py  OrionUserInterface.spec  README.md  general_system_functions.py
API/PyOrion/: __init__.py  account.py  collection.py  connection_log.py  data_structures.py  database.py  encrypted_socket.py  encryption.py  final_values.py  general_system_functions.py  hash.py  item.py  merkle_tree.py  networks_functions.py  orionclient.py  pyproject.toml  request_structure.py  user_data.py  util_functions.py
MainServerSide/: algo.py  driver.py  final_values.py  general_system_functions.py  merkle_tree.py  util_functions.py
MainServerSide/main_server_implementation/: main_data_directory.py  main_server.py
MainServerSide/network_protocol_implementation/: connection_log.py
UserSide/: OrionUserInterface.py  account.py  data_structures.py  final_values.py  general_system_functions.py  hash.py  node_storage.py  pyproject.toml  util_functions.py
UserSide/client_implementation/: orionclient.py  user_data.py
UserSide/network_protocol_implementation/: connection_log.py  encrypted_socket.py  encryption.py  request_structure.py
UserSide/node_implementation/: network_node.py
UserSide/node_implementation/node_data/: node-storage.txt
client_implementation/: orionclient.py
data_storage_implementation/: collection.py  database.py
node_implementation/: network_node.py  node_storage.py
node_implementation/node_data/: node-storage.txt
tests/: check.py  client.py  download_test.py  node_test.py  server.py  upload_test.py
