[tool.poetry]
name = "oriondb"
version = "0.1.0"
description = "Distributed data storage system"
authors = ["Tomer Gat <tomergat2004@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "5.15.9"
PyAutoGUI = "0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
